renamed a bunch of files, converted index to php

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -94,7 +94,7 @@
 <body class="c-pages is-privacy_policy">
 
 <header class="site-header">
-    <a href="/" class="site-logo" title="The Triangle Junior Youth Spiritual Empowerment Program"><img src="/img/logo-0ef633014f51e301d069f34a5ed2fef2af9252c1a98d1e8cc366ea090133dc3e.png" alt="" class="icon"></a>
+    <a href="/" class="site-logo" title="The Triangle Junior Youth Spiritual Empowerment Program"><img src="/img/logo.png" alt="" class="icon"></a>
     <a href="/get-involved.html" class="btn_cta pri-1 js-scrollToAnchor" data-gaValue="get_involved_top_nav">Get involved</a>
     <a href="https://www.facebook.com/trianglejyg" class="sm-link" target="_blank" onclick="ga('send', 'event', 'link', 'click', 'join_facebook_top_nav', 1);"><span class="icon icon-sm fb"><i class="fa fa-facebook"></i></span>Join us on Facebook</a>
 
