--- a/three-questions.html
+++ b/three-questions.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Three questions you need to ask yourself" />
     <meta property="og:description" content="We have a lot in common with young people all over the world, even though our cultures, backgrounds, and personalities may be different. One of our most important similarities is our readiness to make a change in the world. But before we can do that, we need to take a look at our own lives. Here are three questions to help you examine how the choices you make can contribute to social progress. So, go ahead and think about them or talk them over with a friend." />
     <meta property="og:site_name" content="Uplift Chapelboro" />
-    <meta property="og:image" content="/img/topic-1-full_fb-240a2892fdeca80c30d8c21818cbe6ec2762ef85f9d77b3e7495f5a0f0b5a379.jpg" />
+    <meta property="og:image" content="/img/topic-1-full_fb.jpg" />
     <meta property="og:type" content="article" />
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -94,7 +94,7 @@
 <body class="c-topics is-three_questions">
 
 <header class="site-header">
-    <a href="/" class="site-logo" title="The Triangle Junior Youth Spiritual Empowerment Program"><img src="/img/logo-0ef633014f51e301d069f34a5ed2fef2af9252c1a98d1e8cc366ea090133dc3e.png" alt="" class="icon"></a>
+    <a href="/" class="site-logo" title="The Triangle Junior Youth Spiritual Empowerment Program"><img src="/img/logo.png" alt="" class="icon"></a>
     <a href="/get-involved.html" class="btn_cta pri-1 js-scrollToAnchor" data-gaValue="get_involved_top_nav">Get involved</a>
     <a href="https://www.facebook.com/trianglejyg" class="sm-link" target="_blank" onclick="ga('send', 'event', 'link', 'click', 'join_facebook_top_nav', 1);"><span class="icon icon-sm fb"><i class="fa fa-facebook"></i></span>Join us on Facebook</a>
 
@@ -159,7 +159,7 @@
             <div class="section-inner">
                 <div class="fluidVidContainer">
                     <div class="fluidVidContainer-overlay ">
-                        <img src="/img/video-overlay-theroadtolife-0172543410b442d878cd6be75d537332702c58dd40fe0438e5f132dffa1da094.jpg" alt="The Road of Life" class="video-thumb">
+                        <img src="/img/video-overlay-theroadtolife.jpg" alt="The Road of Life" class="video-thumb">
                         <button class="btn_play js-vidPlay" data-vidID="139024343">
                             <span class="icon icon-play"><i class="fa fa-play"></i></span>
                             <span class="video-title">The Road of Life<span class="video-duration">2 min 31 sec</span></span>
@@ -183,7 +183,7 @@
             </div>
         </div>
         <figure class="content-image is-fullsize">
-            <img src="/img/topic-1-full-f07217893414f3d689ce699774bcecfa5f09d5b769ac563ee6de2bcf55c3be81.jpg" alt="">
+            <img src="/img/topic-1-full.jpg" alt="">
         </figure>
         <section class="site-section" id="forces">
             <div class="section-inner">
@@ -206,7 +206,7 @@
                     </header>
                     <p>Many social forces are so pervasive and widespread that they can give the illusion that we have to make choices, even where there aren’t any to be made. Many of us feel torn between choosing a career that will bring personal success or one that will allow us to make a difference in our community. Do we continue the family business or go to college? Do we choose a path toward material wealth or one of spiritual well-being?</p>
                     <figure class="content-image is-halfsize">
-                        <img src="/img/topic-1-half-955334118377dd0413dc9f64dbbbee6c8e49a35d1e2f8a4a2c7a4246912ae86e.jpg" alt="">
+                        <img src="/img/topic-1-half.jpg" alt="">
                     </figure>
                     <p>Perhaps these are not the questions that we should be asking ourselves. They might be choices that we don’t even have to make. We often see success defined by material wealth, something we’re encouraged to aim for at the expense of our spiritual well-being. Lying, cheating, and gossiping are all considered fair game in its pursuit. Or maybe we’re encouraged to pursue our personal dreams even at the expense of our communities, putting ourselves before others.</p>
                     <p class="clear">We believe there is another way. By being of service to others, even while we work and study, we are learning what personal and community development can look like if they are pursued jointly.</p>
@@ -250,7 +250,7 @@
         <ul class="paging-items content-block">
             <li class="paging-item pri-1">
                 <a href="/true-friendship.html" class="paging-link" rel="prev">
-                    <img src="/img/topic-2-half-033fac0925627af9da03a128c68c4f3f7e5d54190b3e403dcaf221a8c7594b4f.jpg" alt="" class="paging-img">
+                    <img src="/img/topic-2-half.jpg" alt="" class="paging-img">
                     <div class="paging-content">
                         <h5 class="paging-heading">What is true friendship?</h5>
                         <span class="btn_clear">Read more <i class="fa fa-angle-double-right"></i></span>
@@ -259,7 +259,7 @@
             </li>
             <li class="paging-item pri-3">
                 <a href="/get-involved.html" class="paging-link" rel="next">
-                    <img src="/img/topic-3-half-3c63a9b816e56f34d236af12bd19bd55595566f21c0d5c550dae467891c416de.jpg" alt="" class="paging-img">
+                    <img src="/img/topic-3-half.jpg" alt="" class="paging-img">
                     <div class="paging-content">
                         <h5 class="paging-heading">Get involved</h5>
                         <span class="btn_clear">Read more <i class="fa fa-angle-double-right"></i></span>
