--- a/true-friendship.html
+++ b/true-friendship.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="What is True Friendship?" />
     <meta property="og:description" content="Friendships are at the core of the Junior Youth Spiritual Empowerment Program. We would like to share some of the lessons we’ve learned over the years." />
     <meta property="og:site_name" content="Uplift Chapelboro" />
-    <meta property="og:image" content="/img/topic-2-full_fb-0c07599c2dd725317dff10eda2f78f16024364a2692c89fcb24f4c0b89255e66.jpg" />
+    <meta property="og:image" content="/img/topic-2-full_fb.jpg" />
     <meta property="og:type" content="article" />
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -94,7 +94,7 @@
 <body class="c-topics is-true_friendship">
 
 <header class="site-header">
-    <a href="/" class="site-logo" title="The Triangle Junior Youth Spiritual Empowerment Program"><img src="/img/logo-0ef633014f51e301d069f34a5ed2fef2af9252c1a98d1e8cc366ea090133dc3e.png" alt="" class="icon"></a>
+    <a href="/" class="site-logo" title="The Triangle Junior Youth Spiritual Empowerment Program"><img src="/img/logo.png" alt="" class="icon"></a>
     <a href="/get-involved.html" class="btn_cta pri-1 js-scrollToAnchor" data-gaValue="get_involved_top_nav">Get involved</a>
     <a href="https://www.facebook.com/trianglejyg" class="sm-link" target="_blank" onclick="ga('send', 'event', 'link', 'click', 'join_facebook_top_nav', 1);"><span class="icon icon-sm fb"><i class="fa fa-facebook"></i></span>Join us on Facebook</a>
 
@@ -161,7 +161,7 @@
             <div class="section-inner">
                 <div class="fluidVidContainer">
                     <div class="fluidVidContainer-overlay is-toocontrasty">
-                        <img src="/img/video-overlay-truefriendship-178333acb55118f544a904f17e905cb8597fa6f8ea0eb917786767d56826949a.png" alt="The Boys of Bollinwood" class="video-thumb">
+                        <img src="/img/video-overlay-truefriendship.png" alt="The Boys of Bollinwood" class="video-thumb">
                         <button class="btn_play js-vidPlay" data-vidID="143646425">
                             <span class="icon icon-play"><i class="fa fa-play"></i></span>
                             <span class="video-title">The Boys of Bollinwood<span class="video-duration">4 min 12 sec</span></span>
@@ -184,7 +184,7 @@
             </div>
         </div>
         <figure class="content-image is-fullsize">
-            <img src="/img/topic-2-full-a5bcd53b76e75449af1d4b5d59414622c2b4ee8032dcec3f83d9913c1c0346fe.jpg" alt="">
+            <img src="/img/topic-2-full.jpg" alt="">
         </figure>
         <section class="site-section" id="service">
             <div class="section-inner">
@@ -207,12 +207,12 @@
                     <p>Who wouldn’t love to live close to their best friends? But instead of waiting for our friends to move closer, we can become friends with our neighbors.</p>
                     <p>We would do anything for our friends; but would we do the same for our neighbors? Most of us have been taught that we should be kind to our neighbors, or even to love them. In other words, we are asked to be their true friends.</p>
                     <figure class="content-image is-halfsize">
-                        <img src="/img/topic-2-half-033fac0925627af9da03a128c68c4f3f7e5d54190b3e403dcaf221a8c7594b4f.jpg" alt="">
+                        <img src="/img/topic-2-half.jpg" alt="">
                     </figure>
                     <p>What would it look like if you were friends with your current neighbors? Leaving your apartment in the morning would look so different if you were friends with everyone who crossed your path. No doubt we would also see a whole other side to each person. “Cranky” old men and women would turn into elders eager to help us while “spoiled” and “annoying” children would become sources of joy and energy, and “sullen” adults would become hardworking and perseverant, inspiring us to push harder.</p>
                     <p class="clear">Only your neighbors know what it’s like to live in your community — from insulation problems, water heater issues, and the cracks in the walls. This shared knowledge can be leveraged to mobilize and engage everyone in improving living conditions. The same goes for addressing social issues, too. Children, teens, adults, and elders can all become involved.</p>
                     <figure class="content-image is-halfsize">
-                        <img src="/img/topic-2-half-2-f5503af6fa7dab60d95663ce53654487e82e9eab8f5e347abcd60a8c0ea2897a.jpg" alt="">
+                        <img src="/img/topic-2-half-2.jpg" alt="">
                     </figure>
                     <p>As mentors of the Junior Youth Spiritual Empowerment Program, we don’t only assist teens. Our groups meet regularly to discuss the challenges everyone in our neighborhood faces. Then we reach out to adults, teenagers, and children to resolve the problems. Volunteering with our neighbors creates a sense of shared purpose that allows us to become close friends. The obstacles in our lives feel temporary and we feel like we can improve our community. We feel hopeful because obstacles become opportunities for us to come together and discover how to overcome them. In this manner, we work slowly but steadily towards a better future for everyone in the neighborhood.</p>
 
@@ -244,7 +244,7 @@
         <ul class="paging-items content-block">
             <li class="paging-item pri-2">
                 <a href="/three-questions.html" class="paging-link" rel="prev">
-                    <img src="/img/topic-1-half-955334118377dd0413dc9f64dbbbee6c8e49a35d1e2f8a4a2c7a4246912ae86e.jpg" alt="" class="paging-img">
+                    <img src="/img/topic-1-half.jpg" alt="" class="paging-img">
                     <div class="paging-content">
                         <h5 class="paging-heading">Three questions you need to ask yourself</h5>
                         <span class="btn_clear">Read more <i class="fa fa-angle-double-right"></i></span>
@@ -253,7 +253,7 @@
             </li>
             <li class="paging-item pri-3">
                 <a href="/get-involved.html" class="paging-link" rel="next">
-                    <img src="/img/topic-3-half-3c63a9b816e56f34d236af12bd19bd55595566f21c0d5c550dae467891c416de.jpg" alt="" class="paging-img">
+                    <img src="/img/topic-3-half.jpg" alt="" class="paging-img">
                     <div class="paging-content">
                         <h5 class="paging-heading">Get involved</h5>
                         <span class="btn_clear">Read more <i class="fa fa-angle-double-right"></i></span>
