--- a/get-involved.html
+++ b/get-involved.html
@@ -19,7 +19,7 @@
     <meta property="og:title" content="Get Involved" />
     <meta property="og:description" content="We are looking for young adults to become mentors for the Junior Youth Spiritual Empowerment Program. No special skills are needed; the only requirement is an eagerness to help create better neighborhoods. There are three steps to become a mentor. Read on to find out how to get started." />
     <meta property="og:site_name" content="Uplift Chapelboro" />
-    <meta property="og:image" content="/img/topic-3-full_fb-45d24f64964ce769e73a40cca4fdc021fa11d789c4745654106096c45957f347.jpg" />
+    <meta property="og:image" content="/img/topic-3-full_fb.jpg" />
     <meta property="og:type" content="article" />
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -95,7 +95,7 @@
 <body class="c-topics is-get_involved">
 
 <header class="site-header">
-    <a href="/" class="site-logo" title="The Triangle Junior Youth Spiritual Empowerment Program"><img src="/img/logo-0ef633014f51e301d069f34a5ed2fef2af9252c1a98d1e8cc366ea090133dc3e.png" alt="" class="icon"></a>
+    <a href="/" class="site-logo" title="The Triangle Junior Youth Spiritual Empowerment Program"><img src="/img/logo.png" alt="" class="icon"></a>
     <a href="/get-involved.html" class="btn_cta pri-1 js-scrollToAnchor" data-gaValue="get_involved_top_nav">Get involved</a>
     <a href="https://www.facebook.com/trianglejyg" class="sm-link" target="_blank" onclick="ga('send', 'event', 'link', 'click', 'join_facebook_top_nav', 1);"><span class="icon icon-sm fb"><i class="fa fa-facebook"></i></span>Join us on Facebook</a>
 
@@ -158,7 +158,7 @@
             </div>
         </section>
         <figure class="content-image is-fullsize">
-            <img src="/img/topic-3-full-78187fae02025eb8a437638bddd4c42c8c227027877ae6408e392dbd623a1517.jpg" alt="">
+            <img src="/img/topic-3-full.jpg" alt="">
         </figure>
         <div class="content-block" id="articleStart">
             <p>We are looking for young adults to become mentors for the Junior Youth Spiritual Empowerment Program. No special skills are needed; the only requirement is an eagerness to help create better neighborhoods. There are three steps to become a mentor. Read on to find out how to get started.</p>
@@ -200,7 +200,7 @@
                         <h2 class="section-heading">Step 2: Get training and experience</h2>
                     </header>
                     <figure class="content-image is-halfsize">
-                        <img src="/img/topic-3-half-3c63a9b816e56f34d236af12bd19bd55595566f21c0d5c550dae467891c416de.jpg" alt="">
+                        <img src="/img/topic-3-half.jpg" alt="">
                     </figure>
                     <p>After attending an interest meeting, you’re invited join a training course that explores topics like the potential of young people, the purpose of the program, and personal character development that helps mentors better assist their groups. With the help of a coordinator, you'll be trained in the Junior Youth Spiritual Empowerment Program course materials, learn cooperative games to share with your groups, and spend time in the field helping an existing junior youth group.</p>
                     <p class="clear"><strong>Training Schedule</strong><br/>
@@ -216,7 +216,7 @@
                     </header>
                     <p>After entering the training process, a program coordinator will assist you to create a new junior youth group, or to support an existing group. There are typically 3 mentors to work with each group of 7-12 participants (aged 11-14). We try to organize it this way so you can share ideas and support fellow mentors. </p>
                     <figure class="content-image is-halfsize">
-                        <img src="/img/topic-3-half-2-be9845e608e15170645b81021bb3c6b713d4a4af761e9ef8665c33cab1ece3e5.jpg" alt="">
+                        <img src="/img/topic-3-half-2.jpg" alt="">
                     </figure>
                     <p><strong>Components of a group</strong>
                     <ul>
@@ -255,7 +255,7 @@
         <ul class="paging-items content-block">
             <li class="paging-item pri-1">
                 <a href="/true-friendship.html" class="paging-link" rel="prev">
-                    <img src="/img/topic-2-half-033fac0925627af9da03a128c68c4f3f7e5d54190b3e403dcaf221a8c7594b4f.jpg" alt="" class="paging-img">
+                    <img src="/img/topic-2-half.jpg" alt="" class="paging-img">
                     <div class="paging-content">
                         <h5 class="paging-heading">What is true friendship?</h5>
                         <span class="btn_clear">Read more <i class="fa fa-angle-double-right"></i></span>
@@ -264,7 +264,7 @@
             </li>
             <li class="paging-item pri-2">
                 <a href="/three-questions.html" class="paging-link" rel="next">
-                    <img src="/img/topic-1-half-955334118377dd0413dc9f64dbbbee6c8e49a35d1e2f8a4a2c7a4246912ae86e.jpg" alt="" class="paging-img">
+                    <img src="/img/topic-1-half.jpg" alt="" class="paging-img">
                     <div class="paging-content">
                         <h5 class="paging-heading">Three questions you need to ask yourself</h5>
                         <span class="btn_clear">Read more <i class="fa fa-angle-double-right"></i></span>
